--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="styles/styles.css">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -7,4 +8,5 @@
 <body>
 	<h1>Naoto Yamaguchi</h1>
 </body>
+<script type="text/javascript" src="js/main.js"></script>
 </html>
