--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <h1 id="naoto-yamaguchi">Naoto Yamaguchi</h1>
 <ol>
 <li>2151B Kauhana Street Honolulu, HI 96816</li>
+<li>naotoy@hawaii.edu</li>
 <li>(808) 206-0616</li>
 <li><a href="https://github.com/naotoyamaguchi">https://github.com/naotoyamaguchi</a></li>
 <li><a href="https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/">https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/</a></li>
