--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul>
 <li>Created a single page application that provided data visualization of buoy data scraped from the NOAA (National Oceanic and Atmospheric Administration). Users were given ability to log in and donate via Stripe to &quot;adopt&quot; sharks that were also providing live data.</li>
 <li>Responsibilities in this project included bash scripting to scrape and modify text data directly from the NOAA website to inject into our PSQL database, handling routes and user authorization with bcrypt, and handling react-redux on the front end to visualize data.</li>
-<li>This project provided with the knowledge gained through self guided programming, experience with working on a team project, and the technical skills of creating a web application.</li>
+<li>Learned about self-guided programming, teamwork, and web app dev through this project</li>
 </ul>
 <h3 id="ssh-hackathon-well-this-is-frustrating-">SSH Hackathon - &#39;Well, this is frustrating&#39;</h3>
 <h4 id="-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-"><a href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating</a></h4>
@@ -22,7 +22,7 @@
 <ul>
 <li>Created a chrome extension that was able to manipulate user interaction with the browser with no prior chrome extension knowledge.</li>
 <li>Responsibilities in this project included the learning of an initial set-up of a chrome extension project, scripting manipulation of keyboard entry into dvorak layout, and implementing manipulation of the DOM.</li>
-<li>This project provided me the experience of quickly picking up new platforms of programming, and effectively dividing work amongst team members.</li>
+<li>Quickly picked up new platforms of programming, and learned to effectively work as a team in a high pressure situation.</li>
 </ul>
 <h2 id="education">Education</h2>
 <h3 id="devleague">DevLeague</h3>
