--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <h1 id="naoto-yamaguchi">Naoto Yamaguchi</h1>
 <ol>
 <li>2151B Kauhana Street Honolulu, HI 96816</li>
-<li>naotoy@hawaii.edu</li>
 <li>(808) 206-0616</li>
 <li><a href="https://github.com/naotoyamaguchi">https://github.com/naotoyamaguchi</a></li>
 <li><a href="https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/">https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/</a></li>
+<li><a href="mailto:naotoy@hawaii.edu">naotoy@hawaii.edu</a></li>
 </ol>
 <h2 id="development-experience">Development Experience</h2>
 <h3 id="buoy-call">Buoy Call</h3>
 <h4 id="-https-buoycall-org-https-buoycall-org-"><a href="https://buoycall.org/">https://buoycall.org/</a></h4>
 <h5 id="march-2017">March 2017</h5>
 <ul>
-<li>Created a single page application that provided data visualization of buoy data scraped from the NOAA (National Oceanic and Atmospheric Administration). Users were given ability to log in and donate via Stripe to &quot;adopt&quot; sharks that were also providing live data.</li>
+<li>Ceated a single page application that provided data visualization of buoy data scraped from the National Oceanic and Atmospheric Administration (NOAA). Users were given ability to log in and donate via Stripe to &quot;adopt&quot; sharks that were also providing live data.</li>
 <li>Responsibilities in this project included bash scripting to scrape and modify text data directly from the NOAA website to inject into our PSQL database, handling routes and user authorization with bcrypt, and handling react-redux on the front end to visualize data.</li>
-<li>Learned about self-guided programming, teamwork, and web app dev through this project</li>
+<li>Learned about self-guided programming, teamwork, and web app dev through this project.</li>
 </ul>
 <h3 id="ssh-hackathon-well-this-is-frustrating-">SSH Hackathon - &#39;Well, this is frustrating&#39;</h3>
 <h4 id="-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-"><a href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating</a></h4>
@@ -29,7 +29,23 @@
 <h4 id="an-890-hour-intensive-course-on-learning-the-tools-required-to-operate-as-a-full-stack-web-developer-javascript-was-taught-as-the-core-language-before-moving-on-to-oop-design-patterns-test-driven-development-postgressql-databases-server-and-api-handling-angularjs-react-and-redux-and-deployment-of-web-apps-">An 890 hour intensive course on learning the tools required to operate as a full-stack web developer. Javascript was taught as the core language before moving on to OOP, design patterns, test-driven development, PostgresSQL databases, server and API handling, AngularJS, React and Redux, and deployment of web apps.</h4>
 <h5 id="oct-2016-may-2017">Oct 2016 - May 2017</h5>
 <h3 id="bachelor-of-arts-in-psychology">Bachelor of Arts in Psychology</h3>
-<h5 id="university-of-hawaii-at-manoa-2014-2016">University of Hawaii at Manoa , 2014 – 2016</h5>
+<h5 id="university-of-hawai-i-at-manoa-2014-2016">University of Hawai&#39;i at Manoa , 2014 – 2016</h5>
+<h2 id="professional-experience">Professional Experience</h2>
+<h3 id="special-education-paraprofessional">Special Education Paraprofessional</h3>
+<h4 id="hawai-i-behavioral-health">Hawai&#39;i Behavioral Health</h4>
+<h5 id="july-2016-may-2017">July 2016 - May 2017</h5>
+<ul>
+<li>Managed a special needs child&#39;s case in a professional setting</li>
+<li>Highlighted my capabilities of handling difficult situations with better patience</li>
+</ul>
+<h3 id="assistant-manager-sales-associate">Assistant Manager / Sales Associate</h3>
+<h4 id="surf-garage">Surf Garage</h4>
+<h5 id="january-2014-may-2017">January 2014 - May 2017</h5>
+<ul>
+<li>Gained independent leadership skills from directing and training new staff</li>
+<li>Responsible for major roles within the store</li>
+<li>Improved interpersonal skills while dealing with both customers and professional business partners</li>
+</ul>
 <h2 id="technical-skills">Technical Skills</h2>
 <h3 id="languages">Languages</h3>
 <ul>
