--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
 <h4 id="hawai-i-behavioral-health">Hawai&#39;i Behavioral Health</h4>
 <h5 id="july-2016-may-2017">July 2016 - May 2017</h5>
 <ul>
-<li>Managed a special needs child&#39;s case in a one-to-one setting.</li>
+<li>Managed a special needs child&#39;s case in a one-to-one setting. My personal recommendations in changes to child&#39;s cirriculum were put into the final plan.</li>
 <li>Successfully handled difficult situations with empathy and patience.</li>
-<li>Accomplished goals that were beyond the yearly standard for my case.</li>
-<li>Personal recommendations in changes to child&#39;s curriculum were put into final plan.</li>
+<li>Accomplished teaching content beyond the standardized goals for the school year.</li>
 </ul>
 <h3 id="assistant-manager-sales-associate">Assistant Manager / Sales Associate</h3>
 <h4 id="surf-garage">Surf Garage</h4>
 <h5 id="january-2014-may-2017">January 2014 - May 2017</h5>
 <ul>
 <li>Directed and trained new staff.</li>
-<li>Responsible for duties that were necessary for smooth operation of the store.</li>
+<li>Responsible for maintaining inventory, ordering product, and designing work flow for employees.</li>
 <li>Managed customer relations and professional business partnerships.</li>
 </ul>
 <h2 id="technical-skills">Technical Skills</h2>
