--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <li>2151B Kauhana Street Honolulu, HI 96816</li>
 <li>(808) 206-0616</li>
 <li><a href="https://github.com/naotoyamaguchi">https://github.com/naotoyamaguchi</a></li>
-<li><a href="https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/">https://www.linkedin.com/in/naoto-yamaguchi-6a1981139/</a></li>
+<li><a href="https://www.linkedin.com/in/naotoyamaguchi/">https://www.linkedin.com/in/naotoyamaguchi/</a></li>
 <li><a href="mailto:naotoy@hawaii.edu">naotoy@hawaii.edu</a></li>
 </ol>
 <h2 id="development-experience">Development Experience</h2>
