--- a/index.html
+++ b/index.html
@@ -1,99 +1,167 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" type="text/css" href="https://devleague-resumes.airshipcms.io/assets/styles/default.css"><link rel="stylesheet" type="text/css" href="styles.css"></head>
-<h1 id="naoto-yamaguchi">Naoto Yamaguchi</h1>
-<ol>
-<li>2151B Kauhana Street Honolulu, HI 96816</li>
-<li>(808) 206-0616</li>
-<li><a href="https://github.com/naotoyamaguchi">https://github.com/naotoyamaguchi</a></li>
-<li><a href="https://www.linkedin.com/in/naotoyamaguchi/">https://www.linkedin.com/in/naotoyamaguchi/</a></li>
-<li><a href="mailto:naotoy@hawaii.edu">naotoy@hawaii.edu</a></li>
-</ol>
-<h2 id="development-experience">Development Experience</h2>
-<h3 id="buoy-call">Buoy Call</h3>
-<h4 id="-https-buoycall-org-https-buoycall-org-"><a href="https://buoycall.org/">https://buoycall.org/</a></h4>
-<h5 id="march-2017">March 2017</h5>
-<ul>
-<li>Ceated a single page application that provided data visualization of buoy data scraped from the National Oceanic and Atmospheric Administration (NOAA). Users were given ability to log in and donate via Stripe to &quot;adopt&quot; sharks that were also providing live data.</li>
-<li>Responsibilities in this project included bash scripting to scrape and modify text data directly from the NOAA website to inject into our PSQL database, handling routes and user authorization with bcrypt, and handling react-redux on the front end to visualize data.</li>
-<li>Learned about self-guided programming, teamwork, and web app dev through this project.</li>
-</ul>
-<h3 id="ssh-hackathon-well-this-is-frustrating-">SSH Hackathon - &#39;Well, this is frustrating&#39;</h3>
-<h4 id="-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-https-github-com-stupidshitnooneinhawaiineedshackathon-wellthisisfrustrating-"><a href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating</a></h4>
-<h5 id="jan-2017">Jan 2017</h5>
-<ul>
-<li>Created a chrome extension that was able to manipulate user interaction with the browser with no prior chrome extension knowledge.</li>
-<li>Responsibilities in this project included the learning of an initial set-up of a chrome extension project, scripting manipulation of keyboard entry into dvorak layout, and implementing manipulation of the DOM.</li>
-<li>Quickly picked up new platforms of programming, and learned to effectively work as a team in a high pressure situation.</li>
-</ul>
-<h2 id="education">Education</h2>
-<h3 id="devleague">DevLeague</h3>
-<h4 id="an-890-hour-intensive-course-on-learning-the-tools-required-to-operate-as-a-full-stack-web-developer-javascript-was-taught-as-the-core-language-before-moving-on-to-oop-design-patterns-test-driven-development-postgressql-databases-server-and-api-handling-angularjs-react-and-redux-and-deployment-of-web-apps-">An 890 hour intensive course on learning the tools required to operate as a full-stack web developer. Javascript was taught as the core language before moving on to OOP, design patterns, test-driven development, PostgresSQL databases, server and API handling, AngularJS, React and Redux, and deployment of web apps.</h4>
-<h5 id="oct-2016-may-2017">Oct 2016 - May 2017</h5>
-<h3 id="bachelor-of-arts-in-psychology">Bachelor of Arts in Psychology</h3>
-<h5 id="university-of-hawai-i-at-manoa-2014-2016">University of Hawai&#39;i at Manoa , 2014 – 2016</h5>
-<h2 id="professional-experience">Professional Experience</h2>
-<h3 id="special-education-paraprofessional">Special Education Paraprofessional</h3>
-<h4 id="hawai-i-behavioral-health">Hawai&#39;i Behavioral Health</h4>
-<h5 id="july-2016-may-2017">July 2016 - May 2017</h5>
-<ul>
-<li>Managed a special needs child&#39;s case in a one-to-one setting. My personal recommendations in changes to child&#39;s cirriculum were put into the final plan.</li>
-<li>Successfully handled difficult situations with empathy and patience.</li>
-<li>Accomplished teaching content beyond the standardized goals for the school year.</li>
-</ul>
-<h3 id="assistant-manager-sales-associate">Assistant Manager / Sales Associate</h3>
-<h4 id="surf-garage">Surf Garage</h4>
-<h5 id="january-2014-may-2017">January 2014 - May 2017</h5>
-<ul>
-<li>Directed and trained new staff.</li>
-<li>Responsible for maintaining inventory, ordering product, and designing work flow for employees.</li>
-<li>Managed customer relations and professional business partnerships.</li>
-</ul>
-<h2 id="technical-skills">Technical Skills</h2>
-<h3 id="languages">Languages</h3>
-<ul>
-<li>JavaScript</li>
-<li>HTML5</li>
-<li>CSS3</li>
-<li>SQL</li>
-</ul>
-<h3 id="web-skills">Web Skills</h3>
-<ul>
-<li>Responsive/Mobile First Web Development</li>
-<li>Test/Behavior Driven Development</li>
-<li>Relational - and Non-Relational Database Modeling </li>
-<li>User Authentication</li>
-<li>API Integration</li>
-</ul>
-<h3 id="frontend-proficiencies">Frontend Proficiencies</h3>
-<ul>
-<li>HTML5</li>
-<li>CSS3</li>
-<li>JavaScript</li>
-<li>ES6</li>
-<li>React</li>
-<li>Redux</li>
-<li>Angular</li>
-<li>D3</li>
-<li>SASS</li>
-</ul>
-<h3 id="server-side-proficiencies">Server-Side Proficiencies</h3>
-<ul>
-<li>NodeJS</li>
-<li>Express</li>
-<li>Sequelize</li>
-<li>GraphQl</li>
-</ul>
-<h3 id="database-proficiencies">Database Proficiencies</h3>
-<ul>
-<li>PostgreSQL </li>
-<li>Redis</li>
-</ul>
-<h3 id="workflow-testing-utilities">Workflow/Testing Utilities</h3>
-<ul>
-<li>Git</li>
-<li>Gulp</li>
-<li>Mocha</li>
-<li>Chai</li>
-<li>SuperTest</li>
-</ul>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
 
+	<title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+
+</head>
+<body>
+
+<div id="doc2" class="yui-t7">
+	<div id="inner">
+	
+		<div id="hd">
+			<div class="yui-gc">
+				<div class="yui-u first">
+					<h1>Jonathan Doe</h1>
+					<h2>Web Designer, Director</h2>
+				</div>
+
+				<div class="yui-u">
+					<div class="contact-info">
+						<h3><a id="pdf" href="#">Download PDF</a></h3>
+						<h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
+						<h3>(313) - 867-5309</h3>
+					</div><!--// .contact-info -->
+				</div>
+			</div><!--// .yui-gc -->
+		</div><!--// hd -->
+
+		<div id="bd">
+			<div id="yui-main">
+				<div class="yui-b">
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Profile</h2>
+						</div>
+						<div class="yui-u">
+							<p class="enlarge">
+								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
+							</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Skills</h2>
+						</div>
+						<div class="yui-u">
+
+								<div class="talent">
+									<h2>Web Design</h2>
+									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
+								</div>
+
+								<div class="talent">
+									<h2>Interface Design</h2>
+									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
+								</div>
+
+								<div class="talent">
+									<h2>Project Direction</h2>
+									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
+								</div>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Technical</h2>
+						</div>
+						<div class="yui-u">
+							<ul class="talent">
+								<li>XHTML</li>
+								<li>CSS</li>
+								<li class="last">Javascript</li>
+							</ul>
+
+							<ul class="talent">
+								<li>Jquery</li>
+								<li>PHP</li>
+								<li class="last">CVS / Subversion</li>
+							</ul>
+
+							<ul class="talent">
+								<li>OS X</li>
+								<li>Windows XP/Vista</li>
+								<li class="last">Linux</li>
+							</ul>
+						</div>
+					</div><!--// .yui-gf-->
+
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>Experience</h2>
+						</div><!--// .yui-u -->
+
+						<div class="yui-u">
+
+							<div class="job">
+								<h2>Facebook</h2>
+								<h3>Senior Interface Designer</h3>
+								<h4>2005-2007</h4>
+								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+							</div>
+
+							<div class="job">
+								<h2>Apple Inc.</h2>
+								<h3>Senior Interface Designer</h3>
+								<h4>2005-2007</h4>
+								<p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
+							</div>
+
+							<div class="job">
+								<h2>Microsoft</h2>
+								<h3>Principal and Creative Lead</h3>
+								<h4>2004-2005</h4>
+								<p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
+							</div>
+
+
+							<div class="job last">
+								<h2>International Business Machines (IBM)</h2>
+								<h3>Lead Web Designer</h3>
+								<h4>2001-2004</h4>
+								<p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
+							</div>
+
+						</div><!--// .yui-u -->
+					</div><!--// .yui-gf -->
+
+
+					<div class="yui-gf last">
+						<div class="yui-u first">
+							<h2>Education</h2>
+						</div>
+						<div class="yui-u">
+							<h2>Indiana University - Bloomington, Indiana</h2>
+							<h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
+						</div>
+					</div><!--// .yui-gf -->
+
+
+				</div><!--// .yui-b -->
+			</div><!--// yui-main -->
+		</div><!--// bd -->
+
+		<div id="ft">
+			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+		</div><!--// footer -->
+
+	</div><!-- // inner -->
+
+
+</div><!--// doc -->
+
+
+</body>
 </html>
