--- a/index.html
+++ b/index.html
@@ -91,9 +91,23 @@
 					<p class="subDetails">Janruary 2014 - May 201</p>
 					<p class="subDetails">Bachelor of Arts in Psychology</p>
 					</br>
-<!-- 					<p>Bachelor of Arts in Psychology</p> -->
+
 				</article>
 				
+			</div>
+			<div class="clear"></div>
+		</section>
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Languages</h1>
+			</div>
+			
+			<div class="sectionContent">
+				<ul class="keySkills">
+					<li>English</li>
+					<li>Japanese (Fluent)</li>
+				</ul>
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -106,14 +120,24 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
+					<li>JavaScript</li>
+					<li>HTML5</li>
+					<li>CSS3</li>
+					<li>SQL</li>
+					<li>ReactJS</li>
+					<li>Redux</li>
+					<li>AngularJS</li>
+					<li>API Integration</li>
+					<li>Responsive Design</li>
+					<li>NodeJS</li>
+					<li>Express</li>
+					<li>PostgresSQL</li>
+					<li>Redis</li>
+					<li>Git</li>
+					<li>Gulp</li>
+					<li>Mocha</li>
+					<li>Chai</li>
+					<li>SuperTest</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -122,20 +146,37 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Education</h1>
+				<h1>Professional Experience</h1>
 			</div>
 			
 			<div class="sectionContent">
 				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<h2>Hawai'i Behavioral Health</h2>
+					<p class="subDetails">Special Education Paraprofessional</p>
+					<p class="subDetails">July 2016 - May 2017</p>
+					<ul>
+						<li><p>Managed a special needs child’s case in a one-to-one setting. Personal recommendations in changes to child’s curriculum were placed into final plans.
+						</p></li>
+						<li><p>Successfully handled difficult situations with empathy and patience. 
+						</p></li>
+						<li><p>
+						Accomplished teaching content beyond the standardized goals for the year.
+						</p></li>
+					</ul>
 				</article>
 				
 				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<h2>Surf Garage</h2>
+					<p class="subDetails">Assistant Manager / Sales Associate</p>
+					<p class="subDetails">January 2014 - May 2017</p>
+					<ul>
+						<li><p>Directed and trained new staff.
+						</p></li>
+						<li><p>Responsible for maintaining inventory, ordering product, and designing work flow for employees.
+						</p></li>
+						<li><p>Assisted in managing customer relations and professional business partnerships.
+						</p></li>
+					</ul>
 				</article>
 			</div>
 			<div class="clear"></div>
