--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Buoy Call</h2>
+					<h2><a href="https://buoycall.org">Buoy Call</a></h2>
 					<p class="subDetails">March 2017</p>
 					<ul>
 						<li><p>Created a single page application that provided data visualization of buoy data scraped from the National Oceanic and Atmospheric Administration (NOAA). Users were given ability to log in and donate via Stripe to "adopt" sharks that were also providing live data.
@@ -58,7 +58,7 @@
 				</article>
 				
 				<article>
-					<h2>SSH Hacakathon</h2>
+					<h2><a href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">SSH Hacakathon</a></h2>
 					<p class="subDetails">January 2017</p>
 					<ul>
 						<li><p>Created a chrome extension that was able to manipulate user interaction with the browser with no prior chrome extension knowledge.
