--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>e: <a href="mailto:naotoy@hawaii.edu" target="_blank">naotoy@hawaii.edu</a></li>
-				<li>w: <a href="https://naotoyamaguchi.github.io/">https://naotoyamaguchi.github.io/</a></li>
+				<li>w: <a href="https://github.com/naotoyamaguchi/">https://github.com/naotoyamaguchi/</a></li>
 				<li>m: (808)206-0616</li>
 			</ul>
 		</div>
