--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<ul>
 				<li>e: <a href="mailto:naotoy@hawaii.edu" target="_blank">naotoy@hawaii.edu</a></li>
 				<li>w: <a href="https://github.com/naotoyamaguchi/">https://github.com/naotoyamaguchi/</a></li>
+				<li>l: <a href="https://www.linkedin.com/in/naotoyamaguchi/">https://www.linkedin.com/in/naotoyamaguchi/</a></li>
 				<li>m: (808)206-0616</li>
 			</ul>
 		</div>
