Added newest professional experience

--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
 			
 			<div class="sectionContent">
 				<article>
+					<h2>DevLeague</h2>
+					<p class="subDetails">Introductory Javascript Assistant Instructor</p>
+					<p class="subDetails">June 2017 - Present</p>
+					<ul>
+						<li><p>Assisting instructor in teaching basic Javascript fundamentals, HTML, CSS, introductory algorithms, and programming workflow (Git, GitHub, Terminal, NodeJS).
+						</p></li>
+						<li><p>Answering questions in an easy-to-understand method on any questions asked by students.
+						</p></li>
+						<li><p>Motivating students to push themselves on their programming skills.
+						</p></li>
+					</ul>
+				</article>
+
+				<article>
 					<h2>Hawai'i Behavioral Health</h2>
 					<p class="subDetails">Special Education Paraprofessional</p>
 					<p class="subDetails">July 2016 - May 2017</p>
