Added new details to devexperience and eduation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
 			
 			<div class="sectionContent">
 				<article>
+					<h2><a href="https://safeword.airshipcms.io">Safeword - AngelHack Hackathon Winner</a></h2>
+					<p class="subDetails">July 2017</p>
+					<ul>
+						<li><p>Worked on a team to develop a winning home security Alexa application for the AngelHack hackathon. Users were able to assign a custom security word to tell Alexa in order to begin video recording and uploading to AWS, while sending out SMS for help. Home-security was also implemented to record on "away" setting when motion was detected.
+						</p></li>
+						<li><p>Developed code for this application to automatically send requests to an AWS destination that would use the Amazon SNS service to deliver text messages on demand. Created front-end to receive live video uploads from Amazon AWS for user.
+						</p></li>
+						<li><p>
+						Experienced learning new concepts under tight time constrictions to fulfill my role in our team. 
+						</p></li>
+					</ul>
+				</article>
+
+				<article>
 					<h2><a href="https://buoycall.org">Buoy Call</a></h2>
 					<p class="subDetails">March 2017</p>
 					<ul>
@@ -81,6 +95,12 @@
 			</div>
 			
 			<div class="sectionContent">
+				<article>
+					<h2>Goma Games (Mentorship)</h2>
+					<p class="subDetails">May 2016 - Present</p>
+					<p>Currently under going mentorship by a senior developer at Goma Games. Gaining knowledge on team application development processes firsthand while contributing on various assigned tasks.</p>
+				</article>
+
 				<article>
 					<h2>DevLeague</h2>
 					<p class="subDetails">October 2016 - May 2017</p>
