Adjusted CSS & added dev experience

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
 			</div>
 			
 			<div class="sectionContent">
+
+				<article>
+					<h2><a href="https://airshipcms.io/windows-installer">Airship CMS - Windows Installer</a></h2>
+					<p class="subDetails">August 2017</p>
+					<ul>
+						<li><p>Created an installer for the Airship application to install and run on a Windows machine. Installer was configured to generate system variables based on install destination for the user in order to use application terminal commands.
+						</p></li>
+						<li><p>Self taught new tools (WiX) to generate code that compiles application files into an MSI installer.
+						</p></li>
+						<li><p>
+						Integrated installer creation process into an automated build script for the Windows application.
+						</p></li>
+					</ul>
+				</article>
+
 				<article>
 					<h2><a href="https://safeword.airshipcms.io">Safeword - AngelHack Hackathon Winner</a></h2>
 					<p class="subDetails">July 2017</p>
