--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li><p>Self taught new tools (WiX) to generate code that compiles application files into an MSI installer.
 						</p></li>
 						<li><p>
-						Integrated installer creation process into an automated build script for the Windows application.
+						Integrated installer creation process into an automated build script for the application's Windows version.
 						</p></li>
 					</ul>
 				</article>
