Edited styles and added tech for projects

--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
 					<h2><a href="https://airshipcms.io/windows-installer">Airship CMS - Windows Installer</a></h2>
 					<p class="subDetails">August 2017</p>
 					<ul>
-						<li><p>Created an installer for the Airship application to install and run on a Windows machine. Installer was configured to generate system variables based on install destination for the user in order to use application terminal commands.
+						<li><p>Created an installer for the Airship application to install and run on a Windows machine. The output of the script generates an MSI installer with some custom behavior for improved user experience.
 						</p></li>
 						<li><p>Self taught new tools (WiX) to generate code that compiles application files into an MSI installer.
 						</p></li>
 						<li><p>
 						Integrated installer creation process into an automated build script for the application's Windows version.
 						</p></li>
+						<li>
+							<p class="tech-used">Tech Used:</p>
+							<p>WiX, Bash, Haxe</p>
+						</li>
 					</ul>
 				</article>
 
@@ -70,6 +74,10 @@
 						<li><p>
 						Experienced learning new concepts under tight time constrictions to fulfill my role in our team. 
 						</p></li>
+						<li>
+							<p class="tech-used">Tech Used:</p>
+							<p>AWS Lambda, Amazon SNS, Serverless, ReactJS</p>
+						</li>
 					</ul>
 				</article>
 
@@ -84,6 +92,10 @@
 						<li><p>
 						Quickly picked up new platforms of programming, and learned to effectively work as a team in a high pressure situation.
 						</p></li>
+						<li>
+							<p class="tech-used">Tech Used:</p>
+							<p>ReactJS, Redux, PSQL, Bash, Rechart</p>
+						</li>
 					</ul>
 				</article>
 				
@@ -97,6 +109,10 @@
 						</p></li>
 						<li><p>Learned about self-guided programming, teamwork, and web app dev through this project.
 						</p></li>
+						<li>
+							<p class="tech-used">Tech Used:</p>
+							<p>Chrome Extensions, GoogleAPI</p>
+						</li>
 					</ul>
 				</article>
 			
@@ -111,7 +127,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Goma Games (Mentorship)</h2>
+					<h2>Goma Games (Apprenticeship)</h2>
 					<p class="subDetails">May 2016 - Present</p>
 					<p>Currently under going mentorship by a senior developer at Goma Games. Gaining knowledge on team application development processes firsthand while contributing on various assigned tasks.</p>
 				</article>
