Added blank targets for hrefs

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:naotoy@hawaii.edu" target="_blank">naotoy@hawaii.edu</a></li>
-				<li>w: <a href="https://github.com/naotoyamaguchi/">https://github.com/naotoyamaguchi/</a></li>
-				<li>l: <a href="https://www.linkedin.com/in/naotoyamaguchi/">https://www.linkedin.com/in/naotoyamaguchi/</a></li>
+				<li>e: <a target="_blank" href="mailto:naotoy@hawaii.edu" target="_blank">naotoy@hawaii.edu</a></li>
+				<li>w: <a target="_blank" href="https://github.com/naotoyamaguchi/">https://github.com/naotoyamaguchi/</a></li>
+				<li>l: <a target="_blank" href="https://www.linkedin.com/in/naotoyamaguchi/">https://www.linkedin.com/in/naotoyamaguchi/</a></li>
 				<li>m: (808)206-0616</li>
 			</ul>
 		</div>
@@ -46,7 +46,7 @@
 			<div class="sectionContent">
 
 				<article>
-					<h2><a href="https://airshipcms.io/windows-installer">Airship CMS - Windows Installer</a></h2>
+					<h2><a target="_blank" href="https://airshipcms.io/windows-installer">Airship CMS - Windows Installer</a></h2>
 					<p class="subDetails">August 2017</p>
 					<ul>
 						<li><p>Created an installer for the Airship application to install and run on a Windows machine. The output of the script generates an MSI installer with some custom behavior for improved user experience.
@@ -64,7 +64,7 @@
 				</article>
 
 				<article>
-					<h2><a href="https://safeword.airshipcms.io">Safeword - AngelHack Hackathon Winner</a></h2>
+					<h2><a target="_blank" href="https://safeword.airshipcms.io">Safeword - AngelHack Hackathon Winner</a></h2>
 					<p class="subDetails">July 2017</p>
 					<ul>
 						<li><p>Worked on a team to develop a winning home security Alexa application for the AngelHack hackathon. Users were able to assign a custom security word to tell Alexa in order to begin video recording and uploading to AWS, while sending out SMS for help. Home-security was also implemented to record on "away" setting when motion was detected.
@@ -82,7 +82,7 @@
 				</article>
 
 				<article>
-					<h2><a href="https://buoycall.org">Buoy Call</a></h2>
+					<h2><a target="_blank" href="https://buoycall.org">Buoy Call</a></h2>
 					<p class="subDetails">March 2017</p>
 					<ul>
 						<li><p>Created a single page application that provided data visualization of buoy data scraped from the National Oceanic and Atmospheric Administration (NOAA). Users were given ability to log in and donate via Stripe to "adopt" sharks that were also providing live data.
@@ -100,7 +100,7 @@
 				</article>
 				
 				<article>
-					<h2><a href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">SSH Hacakathon</a></h2>
+					<h2><a target="_blank" href="https://github.com/STUPIDSHITNOONEINHAWAIINEEDSHACKATHON/WellThisIsFrustrating">SSH Hacakathon</a></h2>
 					<p class="subDetails">January 2017</p>
 					<ul>
 						<li><p>Created a chrome extension that was able to manipulate user interaction with the browser with no prior chrome extension knowledge.
