styled for flushed vertical lining

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						Integrated installer creation process into an automated build script for the application's Windows version.
 						</p></li>
 						<li>
-							<p class="tech-used">Tech Used:</p>
+							<p class="tech-used">Tools Used:</p>
 							<p>WiX, Bash, Haxe</p>
 						</li>
 					</ul>
@@ -75,7 +75,7 @@
 						Experienced learning new concepts under tight time constrictions to fulfill my role in our team. 
 						</p></li>
 						<li>
-							<p class="tech-used">Tech Used:</p>
+							<p class="tech-used">Tools Used:</p>
 							<p>AWS Lambda, Amazon SNS, Serverless, ReactJS</p>
 						</li>
 					</ul>
@@ -93,7 +93,7 @@
 						Quickly picked up new platforms of programming, and learned to effectively work as a team in a high pressure situation.
 						</p></li>
 						<li>
-							<p class="tech-used">Tech Used:</p>
+							<p class="tech-used">Tools Used:</p>
 							<p>ReactJS, Redux, PSQL, Bash, Rechart</p>
 						</li>
 					</ul>
@@ -110,7 +110,7 @@
 						<li><p>Learned about self-guided programming, teamwork, and web app dev through this project.
 						</p></li>
 						<li>
-							<p class="tech-used">Tech Used:</p>
+							<p class="tech-used">Tools Used:</p>
 							<p>Chrome Extensions, GoogleAPI</p>
 						</li>
 					</ul>
